add_granite_internal_lib(granite-input input.hpp input.cpp)
target_include_directories(granite-input PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(granite-input PUBLIC granite-util granite-event granite-math)

if (${CMAKE_SYSTEM} MATCHES "Linux")
    include(FindPkgConfig)
    pkg_check_modules(HOTPLUG_UDEV libudev)
    if (HOTPLUG_UDEV_FOUND)
        target_sources(granite-input PRIVATE input_linux.cpp input_linux.hpp)
        target_include_directories(granite-input PUBLIC ${HOTPLUG_UDEV_INCLUDE_DIRS})
        target_link_libraries(granite-input PRIVATE ${HOTPLUG_UDEV_LIBRARIES})
        target_compile_options(granite-input PRIVATE ${HOTPLUG_UDEV_CFLAGS_OTHER})
    endif()
elseif (WIN32)
    target_sources(granite-input PRIVATE xinput_windows.cpp xinput_windows.hpp)
endif()

if (HOTPLUG_UDEV_FOUND)
    target_compile_definitions(granite-input PUBLIC HAVE_LINUX_INPUT)
elseif (WIN32)
    target_compile_definitions(granite-input PUBLIC HAVE_XINPUT_WINDOWS)
endif()
