add_library(vulkan-wsi STATIC wsi.cpp wsi.hpp input.hpp input.cpp)
target_link_libraries(vulkan-wsi vulkan-backend util)
target_include_directories(vulkan-wsi PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

option(WSI "WSI backend" "GLFW")
if (NOT WSI)
   set(WSI "GLFW")
endif()

if (${WSI} MATCHES "GLFW")
	set(GLFW_BUILD_TESTS OFF)
	add_subdirectory(../../third_party/glfw glfw EXCLUDE_FROM_ALL)
	target_compile_definitions(vulkan-wsi PUBLIC HAVE_GLFW)
	target_link_libraries(vulkan-wsi vulkan-symbols glfw)
elseif (${WSI} MATCHES "DISPLAY")
	target_compile_definitions(vulkan-wsi PUBLIC HAVE_KHR_DISPLAY)
	target_link_libraries(vulkan-wsi vulkan-symbols -pthread)
endif()
